[gd_scene load_steps=16 format=2]

[ext_resource path="res://fonts/Foldit/static/Foldit-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Header.gd" type="Script" id=6]
[ext_resource path="res://GameTheme.tres" type="Theme" id=7]
[ext_resource path="res://fonts/swanston/Swanston.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://fonts/swanston/Swanston-Bold.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://img/pause_icon4.png" type="Texture" id=12]
[ext_resource path="res://BaseBtn.tscn" type="PackedScene" id=13]

[sub_resource type="DynamicFont" id=7]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 0.576471 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=8]
resource_name = "score_jump"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("TotalScoreC/Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, 0 ) ]
}

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.196078, 1, 0, 0.690196 )
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.351111 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0.572549, 0.94902, 1 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )
width = 600

[sub_resource type="DynamicFont" id=10]
size = 30
outline_color = Color( 0.0588235, 0.87451, 0.313726, 1 )
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=9]
size = 30
font_data = ExtResource( 8 )

[node name="Header" type="Control"]
pause_mode = 2
theme = ExtResource( 7 )
script = ExtResource( 6 )

[node name="TotalScoreC" type="Control" parent="."]
margin_top = 100.0
margin_right = 40.0
margin_bottom = 140.0

[node name="Label" type="Label" parent="TotalScoreC"]
modulate = Color( 1, 1, 0, 1 )
margin_right = 600.0
margin_bottom = 48.0
rect_min_size = Vector2( 600, 0 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.576471 )
custom_fonts/font = SubResource( 7 )
text = "$1000"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/score_jump = SubResource( 8 )

[node name="TitleC" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="TitleC"]
margin_right = 600.0
margin_bottom = 25.0
rect_scale = Vector2( 1, 0.4 )
custom_styles/fg = SubResource( 15 )
custom_styles/bg = SubResource( 14 )
step = 1.0
value = 50.0
percent_visible = false

[node name="Bg" type="Sprite" parent="TitleC"]
modulate = Color( 1, 1, 1, 0.101961 )
position = Vector2( 300, 40 )
scale = Vector2( 1, 60 )
texture = SubResource( 12 )
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="TitleC"]
modulate = Color( 0.988235, 0.619608, 0.619608, 1 )
margin_top = 10.0
margin_right = 600.0
margin_bottom = 41.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "Song name привет chock suselüğ"
align = 1
valign = 1

[node name="Artist" type="Label" parent="TitleC"]
modulate = Color( 0.960784, 0.886275, 0.886275, 1 )
margin_left = 1.0
margin_top = 38.0
margin_right = 601.0
margin_bottom = 69.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Vıc Rock"
align = 1
clip_text = true

[node name="PauseBtn" parent="TitleC" instance=ExtResource( 13 )]
modulate = Color( 1, 1, 1, 0.882353 )
margin_left = 10.0
margin_top = 12.0
margin_right = 70.0
margin_bottom = 72.0
icon_texture = ExtResource( 12 )

[connection signal="pressed" from="TitleC/PauseBtn" to="." method="_on_PauseBtn_pressed"]
